css/style.css
 Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */

body{
  font-family: 'Playfair Display', serif;
  color: #807F5C;

}

h1{
  font-size: Ultra-Bold;
  font-weight: 900px;
}

nav ul a,
nav .brand-logo {
  color: #807F5C;
}

header{
  padding-top: 30px;
}

p {
  line-height: 2rem;
}

/*ul.slides {
  max-height: 500px;
  min-height: 450px;
}*/

div.slider.parallax-container{
  max-height: 600px;
  opacity: 30px;
}

.slider .slides li .caption{
  /*text-shadow: 30px;*/
  color: #807F5C;*/
}

.btn, .btn-large{
  background-color: #807F5C;
}

.slider .slides li{
  min-height: 500px;
/*  max-width: */
  max-height: 550px;
}

.slider .slides li img{
  /*height: 550px;*/
  align-content: center;
  max-height: 450px;
  min-height: 400px;
}

li img{
  background-color: #807F5C;
  max-height: 500px;
}

p.right-align.light{
  padding-right: 50px;
  min-width: 350px;
  max-width: 500px;
  text-align: center;

}
#modal1 {
  color: #807F5C;
}

.button-collapse {
  color: #807F5C;
}

.material-icons{
  color:#795548;
}

.parallax-container {
  min-height: 450px;
  line-height: 0;
/*  height: auto;*/
  color: rgba(255,255,255,.9);
  padding-top: 50px;
}
.parallax-container .section {
    width: 100%;
    height: 100%;
  }

@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 10%;
  }
}

@media only screen and (max-width : 600px) {
  #index-banner .section {
    top: 0;
  }
}

.container .center .center{
  color: #807F5C;
}

/*.profpic {*/
  /*padding-left: 20px;*/
/*  max-width: 400px;
  min-width: 350px;*/
/*}*/

img.profpic{
  min-width: 300px;
  max-width: 500px;
  padding-right: 50px;
}

.icon-block {
  padding: 0 15px;
  text-align: center;
}

.icon-block .material-icons {
  font-size: inherit;
}
.card {
padding: 20px;
color:#807F5C;
text-align: center;

}
.cardrow{
  height: 400px;
}
.card .card-action a.link{
  color: #807F5C;
}

.container .profpic{
  padding-top: 30px;
  /*padding-left: 20px;*/
  min-width: 350px;
}

.li h3{
  color:black;
}

.btn btn-large{
background-color:#807F5C;
}

.carosel #caption{
  text-shadow: 10px; 
  color: black;
}

footer.page-footer {
  margin: 0;
  color: #807F5C;
}

page-footer{
  color:#807F5C;
}

/*#carosel{
 min-height: 700px;
}*/

/*#carosel img.laptop{
  min-height: 650px;
}*/

/*#slides{
  min-height: 700px;
}

